--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-  "/static/js/app.js": "/static/js/app.d81d63.js",
-  "/static/js/manifest.js": "/static/js/manifest.c69fa2.js",
+  "/static/js/app.js": "/static/js/app.f52369.js",
+  "/static/js/manifest.js": "/static/js/manifest.8db4bc.js",
   "/static/js/vendor.js": "/static/js/vendor.ab8f94.js"
 }
