--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
   "/static/js/app.js": "/static/js/app.e0eebd.js",
-  "/static/js/manifest.js": "/static/js/manifest.19486e.js",
+  "/static/js/manifest.js": "/static/js/manifest.8f5379.js",
   "/static/js/vendor.js": "/static/js/vendor.ab8f94.js"
 }
