--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-  "/static/js/app.js": "/static/js/app.a4d0ab.js",
-  "/static/js/manifest.js": "/static/js/manifest.576b5e.js",
+  "/static/js/app.js": "/static/js/app.e5ba0c.js",
+  "/static/js/manifest.js": "/static/js/manifest.a6f17b.js",
   "/static/js/vendor.js": "/static/js/vendor.820e40.js"
 }
