--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
   "/static/js/app.js": "/static/js/app.3ea89f.js",
-  "/static/js/manifest.js": "/static/js/manifest.17d722.js",
+  "/static/js/manifest.js": "/static/js/manifest.ed6999.js",
   "/static/js/vendor.js": "/static/js/vendor.5a9892.js"
 }
