--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "ext-curl": "*",
+        "ext-gmp": "*",
         "ext-json": "*",
         "ext-soap": "*",
         "butschster/meta-tags": "v1.15",
@@ -23,10 +24,10 @@
         "laravel/tinker": "^v2.6.0",
         "maksa988/laravel-freekassa": "4.*",
         "rachidlaasri/laravel-installer": "4.1",
+        "romanzipp/laravel-twitch": "^4.1",
         "spatie/laravel-medialibrary": "^8.10.1",
         "tcg/voyager": "^1.4",
-        "torann/hashids": "3.0.2",
-        "ext-gmp": "*"
+        "torann/hashids": "3.0.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
