--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-  "/static/js/app.js": "/static/js/app.3ea89f.js",
-  "/static/js/manifest.js": "/static/js/manifest.ed6999.js",
-  "/static/js/vendor.js": "/static/js/vendor.5a9892.js"
+  "/static/js/app.js": "/static/js/app.5c33e8.js",
+  "/static/js/manifest.js": "/static/js/manifest.0907d6.js",
+  "/static/js/vendor.js": "/static/js/vendor.f5aa05.js"
 }
