--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-  "/static/js/app.js": "/static/js/app.522433.js",
-  "/static/js/manifest.js": "/static/js/manifest.765eda.js",
+  "/static/js/app.js": "/static/js/app.79f0b8.js",
+  "/static/js/manifest.js": "/static/js/manifest.a1dbe8.js",
   "/static/js/vendor.js": "/static/js/vendor.f5aa05.js"
 }
