--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
   "/static/js/app.js": "/static/js/app.79f0b8.js",
-  "/static/js/manifest.js": "/static/js/manifest.78c054.js",
+  "/static/js/manifest.js": "/static/js/manifest.78a672.js",
   "/static/js/vendor.js": "/static/js/vendor.f5aa05.js"
 }
