--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,6 +5,16 @@
 
     RewriteEngine On
 
+    <FilesMatch "\.(html|htm|js|css)$">
+      FileETag None
+      <IfModule mod_headers.c>
+        Header unset ETag
+        Header set Cache-Control "max-age=0, no-cache, no-store, must-revalidate"
+        Header set Pragma "no-cache"
+        Header set Expires "Wed, 12 Jan 1980 05:00:00 GMT"
+      </IfModule>
+    </FilesMatch>
+
     RewriteRule ^(.+)\.pdx$ $1.woff
     RewriteRule ^(.+)\.pdk$ $1.woff2
     RewriteRule ^(.+)\.pda$ $1.ttf
