--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-  "/static/js/app.js": "/static/js/app.79f0b8.js",
-  "/static/js/manifest.js": "/static/js/manifest.30f758.js",
-  "/static/js/vendor.js": "/static/js/vendor.f5aa05.js"
+  "/static/js/app.js": "/static/js/app.e9b5a4.js",
+  "/static/js/manifest.js": "/static/js/manifest.1c7be4.js",
+  "/static/js/vendor.js": "/static/js/vendor.30d585.js"
 }
