--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
   "/static/js/app.js": "/static/js/app.06724e.js",
-  "/static/js/manifest.js": "/static/js/manifest.42bea3.js",
+  "/static/js/manifest.js": "/static/js/manifest.39c7cb.js",
   "/static/js/vendor.js": "/static/js/vendor.f5aa05.js"
 }
