Добавлен енот, фикс стримеров и минимальных бонусов

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
   "/static/js/app.js": "/static/js/app.ee064c.js",
-  "/static/js/manifest.js": "/static/js/manifest.23c501.js",
+  "/static/js/manifest.js": "/static/js/manifest.f7d9aa.js",
   "/static/js/vendor.js": "/static/js/vendor.f5aa05.js"
 }
