--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
   "/static/js/app.js": "/static/js/app.ee064c.js",
-  "/static/js/manifest.js": "/static/js/manifest.70b5a4.js",
+  "/static/js/manifest.js": "/static/js/manifest.e30b92.js",
   "/static/js/vendor.js": "/static/js/vendor.f5aa05.js"
 }
