--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fs-extra": "^9.1.0",
     "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
+    "moment": "^2.29.1",
     "popper.js": "^1.15.0",
     "sweetalert2": "^8.10.0",
     "vform": "^1.0.0",
