--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
   "/static/js/app.js": "/static/js/app.676b43.js",
-  "/static/js/manifest.js": "/static/js/manifest.ccedc9.js",
+  "/static/js/manifest.js": "/static/js/manifest.84fbac.js",
   "/static/js/vendor.js": "/static/js/vendor.f5aa05.js"
 }
